--- a/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
+++ b/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
@@ -31,7 +31,7 @@ Only sections with tag ":export:" will end-up in the presentation. The prefix
 "Slide:" is only syntax-sugar for the reader (and it removed before export by
 emacs).
 
-* Slide: target audience							   :export:
+* Slide: Target audience                                             :export:
 - target audience is a kernel developer that wants to extend existing driver to support /XDP/
 [[file:images/audience.jpg]]
 * Slide: Driver XDP RX-processing (NAPI) loop                        :export:
@@ -69,7 +69,7 @@ Tricky part is *changing* driver */memory model/* to be compatible with XDP
 - Reserve /tailroom/ *for skb_shared_info* and *rely on build_skb()* on XDP_PASS
 - Cannot allocate page fragments to support it (e.g. through napi_alloc_skb())
 - Rx buffers must be recycled to get high speed!
-* XDP architecture								   :export:
+* Slide: XDP architecture                                            :export:
 #+ATTR_HTML: :class img-no-border
 [[file:images/xdp_architecture.png]]
 
@@ -644,7 +644,7 @@ struct sk_buff *mvneta_swbm_build_skb(struct xdp_buff *xdp, ..)
       }
 }
 #+end_src
-* Slide: How to test a XDP driver						   :export:
+* Slide: How to test a XDP driver                                    :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
@@ -726,7 +726,7 @@ sudo ./samples/bpf/xdp_redirect v0 eth0
 - start injecting traffic into v1
 - check outgoing traffic from eth0 with wireshark/tcpdump
 
-* Slide: Q&A:									   :export:
+* Slide: Q&A:                                                        :export:
 #+ATTR_HTML: :class img-no-border
 [[file:images/qa.jpg]]
 - https://github.com/xdp-project
