--- a/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
+++ b/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
@@ -591,7 +591,7 @@ root@espresso-bin:~# ethtool -S eth0 | grep xdp
 Work-in-progress
 - Adding XDP multi-buffers support
 
-** mvneta: multi-buffers support for XDP (1/4)
+** Slide: Multi-buffers support for XDP (1/4)                       :export:
  - */XDP multi-buffer/* use cases
    - Jumbo frames, TSO,
    - Packet header split
@@ -603,7 +603,7 @@ Work-in-progress
      - no abstraction layer to remap the splitted payload area
    - extend *xdp_buff* and *xdp_md* to provide metadata about the packet
      - e.g. full packet length, number of segments
-** mvneta: multi-buffers support for XDP (2/4)
+** Slide: Multi-buffers support for XDP (2/4)                       :export:
    - storage space for multi-buffer segments references
      - *skb_shared_info* at the end of the first segment
    - modify drivers rx NAPI loop
@@ -615,10 +615,10 @@ Work-in-progress
        - mvneta_xdp_submit_frame
      - remove MTU check loading the eBPF program
        - mvneta_xdp_setup
-** mvneta: multi-buffers support for XDP (3/4)
+** Slide: Multi-buffers support for XDP (3/4)                       :export:
 #+ATTR_HTML: :class img-no-border
 [[file:images/xdp-multibuff.png]]
-** mvneta: multi-buffers support for XDP (4/4)
+** Slide: (mvneta) Multi-buffers support for XDP (4/4)              :export:
 #+begin_src C
 void mvneta_swbm_add_rx_fragment(struct xdp_buff *xdp, ...)
 {
