conference/NetDevConf2020: New Slide: Register your XDP memory model
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
+++ b/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
@@ -69,6 +69,20 @@ Tricky part is *changing* driver */memory model/* to be compatible with XDP
 - Reserve /tailroom/ *for skb_shared_info* and *rely on build_skb()* on XDP_PASS
 - Cannot allocate page fragments to support it (e.g. through napi_alloc_skb())
 - Rx buffers must be recycled to get high speed!
+
+** Slide: Register your XDP memory model                            :export:
+
+XDP force /drivers/ to register *which memory model* they use
+- See struct /xdp_rxq_info/ and member *"mem"* struct /xdp_mem_info/
+  - API see: =xdp_rxq_info_reg_mem_model()=
+
+Advantage: Allows inventing new (RX) memory models for networking
+- =MEM_TYPE_PAGE_SHARED= is the normal refcnt based model
+- =MEM_TYPE_PAGE_POOL= is optimized for XDP (more on this later)
+- =MEM_TYPE_XSK_BUFF_POOL= is to AF_XDP zero-copy into userspace
+- Hope new models will be invented
+  - e.g. imagine memory used by NIC belongs to GPU graphics card
+
 * Slide: XDP architecture                                            :export:
 #+ATTR_HTML: :class img-no-border
 [[file:images/xdp_architecture.png]]
