--- a/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
+++ b/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
@@ -388,7 +388,7 @@ $tc qdisc add dev eth0 clsact ; tc filter add dev eth0 ingress matchall action g
 - /XDP_PASS/ to forward the frame to the networking stack
 - /mvneta_swbm_rx_frame()/ relies on */build_skb()/* for zero-copy
   - get rid of original copy-break approach
-  - take into account *skb_shared_info* in the buffer headroom
+  - take into account *skb_shared_info* in the buffer tailroom
 #+begin_src C
 int mvneta_rx_swbm(struct napi_struct *napi, ..., struct mvneta_rx_queue *rxq)
 {
@@ -565,7 +565,7 @@ Work-in-progress
 
 ** Slide: Multi-buffers support for XDP (1/4)                       :export:
  - */XDP multi-buffer/* use cases
-   - Jumbo frames, TSO,
+   - Jumbo frames, TSO
    - Packet header split
    - Handling GRO SKBs in veth/cpumap/generic-XDP
  - /eBPF Direct-Access (DA)/ to packet data: single buffer per packet design
