--- a/conference/LinuxPlumbers2020/xdp-multiprog.org
+++ b/conference/LinuxPlumbers2020/xdp-multiprog.org
@@ -107,8 +107,8 @@ With this, we can build multi-prog support in userspace /at BPF program load tim
 #+begin_src C
 static const struct xdp_dispatcher_config {
 	__u8 num_progs_enabled;
-	__u32 chain_call_actions[10];
-	__u32 run_prios[10];
+	__u32 chain_call_actions[10];     /* bitmask of actions to chain call */
+	__u32 run_prios[10];              /* priority (for sorting programs in execution order) */
 } conf = {}; /* populated at load */
 
 int prog0(struct xdp_md *ctx) { return XDP_PASS; } /* repeat for prog0()..prog9() functions */
@@ -118,13 +118,13 @@ int xdp_dispatcher(struct xdp_md *ctx)
 {
         int ret;
 
+        /* handle prog0 */
         if (conf.num_progs_enabled < 1) /* for verifier dead code elimination */
                 goto out;
         ret = prog0(ctx);
         if (!((1U << ret) & conf.chain_call_actions[0]))
                 return ret;
-
-        /* repeat for prog1..prog9 */
+        /* end prog0 - repeat for prog1..prog9 */
 out:
         return XDP_PASS;
 }
@@ -143,6 +143,9 @@ int load_dispatcher(int num_progs, struct xdp_dispatcher_config *config)
 
   config->num_progs_enabled = num_progs;
   for (int i = 0; i < num_progs; i++) {
+    if (config->chain_call_cations[i])
+      continue; /* already set, should be the common case */
+
     /* defaults - in reality, get from actual programs, see later slide */
     config->chain_call_actions[i] = (1U << XDP_PASS);
     config->run_prios[i] = 50;
@@ -153,7 +156,6 @@ int load_dispatcher(int num_progs, struct xdp_dispatcher_config *config)
   bpf_object__load(obj);
   return bpf_program__fd(bpf_object__find_prog_by_idx(obj, 0));
 }
-
 #+end_src
 ** Attaching component program (single prog)                        :export:
 
@@ -186,20 +188,23 @@ int attach_prog_to_dispatcher(struct bpf_object *bpf_obj)
 int attach_second_program(int old_dispatcher_fd, int new_prog_fd)
 {
   struct xdp_dispatcher_config old_config = {};
-  int map_fd, old_prog_fd;
+  int map_fd, prog_fds[2] = { -1, new_prog_fd };
   __u32 map_key = 0;
   char buf[100];
 
   map_fd = get_map_from_prog_id(old_dispatcher);
   bpf_map_lookup_elem(map_fd, &map_key, &old_config);
 
+  sprintf(buf, "/sys/fs/xdp/dispatch-%d-%d/prog0-prog", ifindex, get_prog_id(old_dispatcher_fd));
+  prog_fds[0] = bpf_object_get(buf);
+
+  /* determine order of progs - old prog prio from old_config, new from prog BTF */
+  sort_by_run_prio(&prog_fds, &old_config);
   new_dispatcher_fd = load_dispatcher(2, &old_config);
-  sprintf(buf, "/sys/fs/xdp/dispatch-%d-%d/prog0-prog", ifindex, old_dispatcher_fd);
-  old_prog_fd = bpf_object_get(buf);
 
   /* support for this is still missing from the kernel (see later slide) */
-  bpf_raw_tracepoint_open(NULL, old_prog_fd, new_dispatcher_fd, get_btf_id("prog0"));
-  bpf_raw_tracepoint_open(NULL, new_prog_fd, new_dispatcher_fd, get_btf_id("prog1"));
+  bpf_raw_tracepoint_open(NULL, prog_fds[0], new_dispatcher_fd, get_btf_id("prog0"));
+  bpf_raw_tracepoint_open(NULL, prog_fds[1], new_dispatcher_fd, get_btf_id("prog1"));
 
   return new_dispatcher_fd;
 }
@@ -240,12 +245,12 @@ BPF programs encode *priority* and /chain call actions/ in BTF.
 #+begin_src C
 #include <linux/bpf.h>
 #include <bpf/bpf_helpers.h>
-#include <xdp/xdp_helpers.h>
+#include <xdp/xdp_helpers.h> /* #define XDP_RUN_CONFIG(f) _CONCAT(_,f) SEC(".xdp_run_config") */
 
 struct {
 	__uint(priority, 10);
 	__uint(XDP_PASS, 1);
-} XDP_RUN_CONFIG(xdp_pass);
+} XDP_RUN_CONFIG(xdp_pass); /* from xdp_helpers.h - struct name + section, like BTF map def */
 
 SEC("prog")
 int xdp_pass(struct xdp_md *ctx)
@@ -314,7 +319,7 @@ However, still /*can't load them one at a time*/.
 ** Missing kernel features (soon to be resolved)                    :export:
 
 - Attaching freplace programs in *multiple places*
-  - Needed for adding programs one at a time
+  - Attach existing progs to new dispatcher, then atomically replace on interface
   - /WiP/ (by me)
 
 
